--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="app">
         <ul>
             <li>
-                <p>{{mail}}</p>
+                <p @click="fetchMail">prova</p>
             </li>
         </ul>
     </div>
